--- a/localisation/english/MD_countries_cosmetic_l_english.yml
+++ b/localisation/english/MD_countries_cosmetic_l_english.yml
@@ -927,6 +927,271 @@
  USoE_WIT_neutrality_ADJ: "European"
  USoE_WIT_neutrality_DEF: "the Holy European Empire"
 
+  #Normal
+ UOE_democratic: "United States of Europe"
+ UOE_democratic_ADJ: "European"
+ UOE_democratic_DEF: "the United States of Europe"
+ UOE_communism: "United States of Europe"
+ UOE_communism_ADJ: "European"
+ UOE_communism_DEF: "the United States of Europe"
+ UOE_neutrality: "United States of Europe"
+ UOE_neutrality_ADJ: "European"
+ UOE_neutrality_DEF: "the United States of Europe"
+ UOE_fascism: "United States of Europe"
+ UOE_fascism_ADJ: "European"
+ UOE_fascism_DEF: "the United States of Europe"
+ UOE_nationalist: "United States of Europe"
+ UOE_nationalist_ADJ: "European"
+ UOE_nationalist_DEF: "the United States of Europe"
+
+ #Gommies
+ UOE_com_communism: "European People's Union"
+ UOE_com_communism_ADJ: "European"
+ UOE_com_communism_DEF: "the European People's Union"
+ UOE_com_neutrality: "United Soviets of Europe"
+ UOE_com_neutrality_ADJ: "European"
+ UOE_com_neutrality_DEF: "the United Soviets of Europe"
+ UOE_com_democratic: "United States of Europe"
+ UOE_com_democratic_ADJ: "European"
+ UOE_com_democratic_DEF: "the United States of Europe"
+ UOE_com_fascism: "United States of Europe"
+ UOE_com_fascism_ADJ: "European"
+ UOE_com_fascism_DEF: "the United States of Europe"
+ UOE_com_nationalist: "United States of Europe"
+ UOE_com_nationalist_ADJ: "European"
+ UOE_com_nationalist_DEF: "the United States of Europe"
+
+ #Greens
+ UOE_green_democratic: "United States of Europe"
+ UOE_green_democratic_ADJ: "European"
+ UOE_green_democratic_DEF: "the United States of Europe"
+ UOE_green_communism: "United States of Europe"
+ UOE_green_communism_ADJ: "European"
+ UOE_green_communism_DEF: "the United States of Europe"
+ UOE_green_neutrality: "United States of Europe"
+ UOE_green_neutrality_ADJ: "European"
+ UOE_green_neutrality_DEF: "the United States of Europe"
+ UOE_green_fascism: "United States of Europe"
+ UOE_green_fascism_ADJ: "European"
+ UOE_green_fascism_DEF: "the United States of Europe"
+ UOE_green_nationalist: "United States of Europe"
+ UOE_green_nationalist_ADJ: "European"
+ UOE_green_nationalist_DEF: "the United States of Europe"
+
+ #Junta
+ UOE_air_nationalist: "European Empire"
+ UOE_air_nationalist_ADJ: "European"
+ UOE_air_nationalist_DEF: "the European Empire"
+ UOE_army_nationalist: "European Empire"
+ UOE_army_nationalist_ADJ: "European"
+ UOE_army_nationalist_DEF: "the European Empire"
+ UOE_navy_nationalist: "European Empire"
+ UOE_navy_nationalist_ADJ: "European"
+ UOE_navy_nationalist_DEF: "the European Empire"
+ UOE_air_democratic: "European Empire"
+ UOE_air_democratic_ADJ: "European"
+ UOE_air_democratic_DEF: "the European Empire"
+ UOE_army_democratic: "European Empire"
+ UOE_army_democratic_ADJ: "European"
+ UOE_army_democratic_DEF: "the European Empire"
+ UOE_navy_democratic: "European Empire"
+ UOE_navy_democratic_ADJ: "European"
+ UOE_navy_democratic_DEF: "the European Empire"
+ UOE_air_communism: "European Empire"
+ UOE_air_communism_ADJ: "European"
+ UOE_air_communism_DEF: "the European Empire"
+ UOE_army_communism: "European Empire"
+ UOE_army_communism_ADJ: "European"
+ UOE_army_communism_DEF: "the European Empire"
+ UOE_navy_communism: "European Empire"
+ UOE_navy_communism_ADJ: "European"
+ UOE_navy_communism_DEF: "the European Empire"
+ UOE_air_fascism: "European Empire"
+ UOE_air_fascism_ADJ: "European"
+ UOE_air_fascism_DEF: "the European Empire"
+ UOE_army_fascism: "European Empire"
+ UOE_army_fascism_ADJ: "European"
+ UOE_army_fascism_DEF: "the European Empire"
+ UOE_navy_fascism: "European Empire"
+ UOE_navy_fascism_ADJ: "European"
+ UOE_navy_fascism_DEF: "the European Empire"
+ UOE_air_neutrality: "European Empire"
+ UOE_air_neutrality_ADJ: "European"
+ UOE_air_neutrality_DEF: "the European Empire"
+ UOE_army_neutrality: "European Empire"
+ UOE_army_neutrality_ADJ: "European"
+ UOE_army_neutrality_DEF: "the European Empire"
+ UOE_navy_neutrality: "European Empire"
+ UOE_navy_neutrality_ADJ: "European"
+ UOE_navy_neutrality_DEF: "the European Empire"
+
+ #Monarchist
+ UOE_BOR_nationalist: "Holy European Empire"
+ UOE_BOR_nationalist_ADJ: "European"
+ UOE_BOR_nationalist_DEF: "the Holy European Empire"
+ UOE_BOR_ANJ_nationalist: "Holy European Empire"
+ UOE_BOR_ANJ_nationalist_ADJ: "European"
+ UOE_BOR_ANJ_nationalist_DEF: "the Holy European Empire"
+ UOE_GLU_nationalist: "Holy European Empire"
+ UOE_GLU_nationalist_ADJ: "European"
+ UOE_GLU_nationalist_DEF: "the Holy European Empire"
+ UOE_HAB_nationalist: "Holy European Empire"
+ UOE_HAB_nationalist_ADJ: "European"
+ UOE_HAB_nationalist_DEF: "the Holy European Empire"
+ UOE_HAN_nationalist: "Holy European Empire"
+ UOE_HAN_nationalist_ADJ: "European"
+ UOE_HAN_nationalist_DEF: "the Holy European Empire"
+ UOE_HOH_nationalist: "Holy European Empire"
+ UOE_HOH_nationalist_ADJ: "European"
+ UOE_HOH_nationalist_DEF: "the Holy European Empire"
+ UOE_NAP_nationalist: "Holy European Empire"
+ UOE_NAP_nationalist_ADJ: "European"
+ UOE_NAP_nationalist_DEF: "the Holy European Empire"
+ UOE_ORA_nationalist: "Holy European Empire"
+ UOE_ORA_nationalist_ADJ: "European"
+ UOE_ORA_nationalist_DEF: "the Holy European Empire"
+ UOE_SAV_nationalist: "Holy European Empire"
+ UOE_SAV_nationalist_ADJ: "European"
+ UOE_SAV_nationalist_DEF: "the Holy European Empire"
+ UOE_WIN_nationalist: "Holy European Empire"
+ UOE_WIN_nationalist_ADJ: "European"
+ UOE_WIN_nationalist_DEF: "the Holy European Empire"
+ UOE_WIT_nationalist: "Holy European Empire"
+ UOE_WIT_nationalist_ADJ: "European"
+ UOE_WIT_nationalist_DEF: "the Holy European Empire"
+ UOE_BOR_democratic: "Holy European Empire"
+ UOE_BOR_democratic_ADJ: "European"
+ UOE_BOR_democratic_DEF: "the Holy European Empire"
+ UOE_BOR_ANJ_democratic: "Holy European Empire"
+ UOE_BOR_ANJ_democratic_ADJ: "European"
+ UOE_BOR_ANJ_democratic_DEF: "the Holy European Empire"
+ UOE_GLU_democratic: "Holy European Empire"
+ UOE_GLU_democratic_ADJ: "European"
+ UOE_GLU_democratic_DEF: "the Holy European Empire"
+ UOE_HAB_democratic: "Holy European Empire"
+ UOE_HAB_democratic_ADJ: "European"
+ UOE_HAB_democratic_DEF: "the Holy European Empire"
+ UOE_HAN_democratic: "Holy European Empire"
+ UOE_HAN_democratic_ADJ: "European"
+ UOE_HAN_democratic_DEF: "the Holy European Empire"
+ UOE_HOH_democratic: "Holy European Empire"
+ UOE_HOH_democratic_ADJ: "European"
+ UOE_HOH_democratic_DEF: "the Holy European Empire"
+ UOE_NAP_democratic: "Holy European Empire"
+ UOE_NAP_democratic_ADJ: "European"
+ UOE_NAP_democratic_DEF: "the Holy European Empire"
+ UOE_ORA_democratic: "Holy European Empire"
+ UOE_ORA_democratic_ADJ: "European"
+ UOE_ORA_democratic_DEF: "the Holy European Empire"
+ UOE_SAV_democratic: "Holy European Empire"
+ UOE_SAV_democratic_ADJ: "European"
+ UOE_SAV_democratic_DEF: "the Holy European Empire"
+ UOE_WIN_democratic: "Holy European Empire"
+ UOE_WIN_democratic_ADJ: "European"
+ UOE_WIN_democratic_DEF: "the Holy European Empire"
+ UOE_WIT_democratic: "Holy European Empire"
+ UOE_WIT_democratic_ADJ: "European"
+ UOE_WIT_democratic_DEF: "the Holy European Empire"
+ UOE_BOR_communism: "Holy European Empire"
+ UOE_BOR_communism_ADJ: "European"
+ UOE_BOR_communism_DEF: "the Holy European Empire"
+ UOE_BOR_ANJ_communism: "Holy European Empire"
+ UOE_BOR_ANJ_communism_ADJ: "European"
+ UOE_BOR_ANJ_communism_DEF: "the Holy European Empire"
+ UOE_GLU_communism: "Holy European Empire"
+ UOE_GLU_communism_ADJ: "European"
+ UOE_GLU_communism_DEF: "the Holy European Empire"
+ UOE_HAB_communism: "Holy European Empire"
+ UOE_HAB_communism_ADJ: "European"
+ UOE_HAB_communism_DEF: "the Holy European Empire"
+ UOE_HAN_communism: "Holy European Empire"
+ UOE_HAN_communism_ADJ: "European"
+ UOE_HAN_communism_DEF: "the Holy European Empire"
+ UOE_HOH_communism: "Holy European Empire"
+ UOE_HOH_communism_ADJ: "European"
+ UOE_HOH_communism_DEF: "the Holy European Empire"
+ UOE_NAP_communism: "Holy European Empire"
+ UOE_NAP_communism_ADJ: "European"
+ UOE_NAP_communism_DEF: "the Holy European Empire"
+ UOE_ORA_communism: "Holy European Empire"
+ UOE_ORA_communism_ADJ: "European"
+ UOE_ORA_communism_DEF: "the Holy European Empire"
+ UOE_SAV_communism: "Holy European Empire"
+ UOE_SAV_communism_ADJ: "European"
+ UOE_SAV_communism_DEF: "the Holy European Empire"
+ UOE_WIN_communism: "Holy European Empire"
+ UOE_WIN_communism_ADJ: "European"
+ UOE_WIN_communism_DEF: "the Holy European Empire"
+ UOE_WIT_communism: "Holy European Empire"
+ UOE_WIT_communism_ADJ: "European"
+ UOE_WIT_communism_DEF: "the Holy European Empire"
+ UOE_BOR_fascism: "Holy European Empire"
+ UOE_BOR_fascism_ADJ: "European"
+ UOE_BOR_fascism_DEF: "the Holy European Empire"
+ UOE_BOR_ANJ_fascism: "Holy European Empire"
+ UOE_BOR_ANJ_fascism_ADJ: "European"
+ UOE_BOR_ANJ_fascism_DEF: "the Holy European Empire"
+ UOE_GLU_fascism: "Holy European Empire"
+ UOE_GLU_fascism_ADJ: "European"
+ UOE_GLU_fascism_DEF: "the Holy European Empire"
+ UOE_HAB_fascism: "Holy European Empire"
+ UOE_HAB_fascism_ADJ: "European"
+ UOE_HAB_fascism_DEF: "the Holy European Empire"
+ UOE_HAN_fascism: "Holy European Empire"
+ UOE_HAN_fascism_ADJ: "European"
+ UOE_HAN_fascism_DEF: "the Holy European Empire"
+ UOE_HOH_fascism: "Holy European Empire"
+ UOE_HOH_fascism_ADJ: "European"
+ UOE_HOH_fascism_DEF: "the Holy European Empire"
+ UOE_NAP_fascism: "Holy European Empire"
+ UOE_NAP_fascism_ADJ: "European"
+ UOE_NAP_fascism_DEF: "the Holy European Empire"
+ UOE_ORA_fascism: "Holy European Empire"
+ UOE_ORA_fascism_ADJ: "European"
+ UOE_ORA_fascism_DEF: "the Holy European Empire"
+ UOE_SAV_fascism: "Holy European Empire"
+ UOE_SAV_fascism_ADJ: "European"
+ UOE_SAV_fascism_DEF: "the Holy European Empire"
+ UOE_WIN_fascism: "Holy European Empire"
+ UOE_WIN_fascism_ADJ: "European"
+ UOE_WIN_fascism_DEF: "the Holy European Empire"
+ UOE_WIT_fascism: "Holy European Empire"
+ UOE_WIT_fascism_ADJ: "European"
+ UOE_WIT_fascism_DEF: "the Holy European Empire"
+ UOE_BOR_neutrality: "Holy European Empire"
+ UOE_BOR_neutrality_ADJ: "European"
+ UOE_BOR_neutrality_DEF: "the Holy European Empire"
+ UOE_BOR_ANJ_neutrality: "Holy European Empire"
+ UOE_BOR_ANJ_neutrality_ADJ: "European"
+ UOE_BOR_ANJ_neutrality_DEF: "the Holy European Empire"
+ UOE_GLU_neutrality: "Holy European Empire"
+ UOE_GLU_neutrality_ADJ: "European"
+ UOE_GLU_neutrality_DEF: "the Holy European Empire"
+ UOE_HAB_neutrality: "Holy European Empire"
+ UOE_HAB_neutrality_ADJ: "European"
+ UOE_HAB_neutrality_DEF: "the Holy European Empire"
+ UOE_HAN_neutrality: "Holy European Empire"
+ UOE_HAN_neutrality_ADJ: "European"
+ UOE_HAN_neutrality_DEF: "the Holy European Empire"
+ UOE_HOH_neutrality: "Holy European Empire"
+ UOE_HOH_neutrality_ADJ: "European"
+ UOE_HOH_neutrality_DEF: "the Holy European Empire"
+ UOE_NAP_neutrality: "Holy European Empire"
+ UOE_NAP_neutrality_ADJ: "European"
+ UOE_NAP_neutrality_DEF: "the Holy European Empire"
+ UOE_ORA_neutrality: "Holy European Empire"
+ UOE_ORA_neutrality_ADJ: "European"
+ UOE_ORA_neutrality_DEF: "the Holy European Empire"
+ UOE_SAV_neutrality: "Holy European Empire"
+ UOE_SAV_neutrality_ADJ: "European"
+ UOE_SAV_neutrality_DEF: "the Holy European Empire"
+ UOE_WIN_neutrality: "Holy European Empire"
+ UOE_WIN_neutrality_ADJ: "European"
+ UOE_WIN_neutrality_DEF: "the Holy European Empire"
+ UOE_WIT_neutrality: "Holy European Empire"
+ UOE_WIT_neutrality_ADJ: "European"
+ UOE_WIT_neutrality_DEF: "the Holy European Empire"
+
  ### Special ###
  #SAU
  SAU_AUTH_S_fascism: "Saudi Arabia"
@@ -3722,7 +3987,7 @@
  PBL_AUTH_SS_neutrality_ADJ: "Peru-Bolivian"
  PBL_AUTH_SS_fascism_ADJ: "Peru-Bolivian"
  PBL_AUTH_SS_communism_ADJ: "Peru-Bolivian"
- 
+
  PMR_monarchy: "Duchy of Transnistria"
  PMR_Moldova: "Republic of Moldova"
  PMR_republic: "Republic of Transnistria"
@@ -3745,7 +4010,7 @@
  PMR_rusempire_nationalist: "Russia"
  PMR_rusempire_nationalist_DEF: "Russia"
  PMR_rusempire_nationalist_ADJ: "Russia"
- 
+
  #Hezbollah
  ISLAMIC_REPUBLIC_OF_LEBANON: "Islamic Republic of Lebanon"
  ISLAMIC_REPUBLIC_OF_LEBANON_ADJ: "Lebanese"
@@ -3825,7 +4090,7 @@
  RYU_USA_neutrality_DEF: "The Government of the Ryukyu Islands"
  RYU_USA_nationalist: "Government of The Ryukyu Islands"
  RYU_USA_nationalist_DEF: "The Government of the Ryukyu Islands"
- 
+
  #UAR related
  UAR_democratic: "Arab Federation"
  UAR_democratic_DEF: "the Arab Federation"
