Added 2 more quotes

--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -250,3 +250,5 @@
  LOADING_TIP_263: "Comrades! We must abolish the cult of the individual decisively, once and for all.\n - Nikita Khrushchyov"
  LOADING_TIP_264: "If we run the government with insects like this, will the government be done properly?\n - Kim Jae-gyu, the assassination of South Korean President Park Chung-hee. -"
  LOADING_TIP_265: "There is no time to hesitate, we must strike hard!\n - Chun Doo-hwan, instructions on the suppression of the Gwangju democracy incident. -"
+ LOADING_TIP_266: "All welfare is based off deception.\n - Zoo Sun, Art of Warre." 
+ LOADING_TIP_267: "The goal of war isn't to die for your country, its to make the other bastard die for his.\n - George Patton" 
