--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,7 +1,10 @@
 v1.10.2
 
+ Bugfixes:
+  - Fixed a bug with Iran not having F-14 Tomcats in their stockpile (For BBA Players)
+
  Graphics:
- - Enlarged previously broken diplo actions backgrounds so that they fit the buttons accurately
+  - Enlarged previously broken diplo actions backgrounds so that they fit the buttons accurately
 
 v1.10.1
 
