--- a/localisation/french/MD_focus_BLR_l_french.yml
+++ b/localisation/french/MD_focus_BLR_l_french.yml
@@ -2287,3 +2287,13 @@
  unionstate_serbia_output_text: "[serbia_ready_union_state]"
  SER_serbia_readys_union_state: "§YPercentage§! of §Y[SER.GetNameWithFlag]§! readiness to integrate into the §YUnion State§!"
  SER_serbia_notreadys_union_state: "§RUNAVAILABLE§!"
+ unionstate_israel_tooltip: "[israel_readys_union_state]"
+ unionstate_israel_output_text: "[israel_ready_union_state]"
+ ISR_israel_ready_union_state: "§Y[?ISR.union_state|-0]§!"
+ ISR_israel_readys_union_state: "§YPercentage§! of §Y[ISR.GetNameWithFlag]§! readiness to integrate into the §YUnion State§!"
+ ISR_israel_notreadys_union_state: "§RUNAVAILABLE§!"
+ unionstate_ukraine_tooltip: "[ukraine_readys_union_state]"
+ unionstate_ukraine_output_text: "[ukraine_ready_union_state]"
+ UKR_ukraine_ready_union_state: "§Y[?UKR.union_state|-0]§!"
+ UKR_ukraine_readys_union_state: "§YPercentage§! of §Y[UKR.GetNameWithFlag]§! readiness to integrate into the §YUnion State§!"
+ UKR_ukraine_notreadys_union_state: "§RUNAVAILABLE§!"
