--- a/localisation/french/MD_frontend_l_french.yml
+++ b/localisation/french/MD_frontend_l_french.yml
@@ -102,7 +102,7 @@
  custom_diff_weak_che: "@CHE Affaiblir la Tchétchénie"
  custom_diff_weak_bsh: "@BSH Affaiblir le Bashkortostan"
  VERSION_MD: "Millennium Dawn : Un Monde Moderne v1.10.2"
- VERSION_MD_DATE: "Date de sortie : 11 juillet 2024, 0h30 UTC\n"
+ VERSION_MD_DATE: "Date de sortie : 11 Juillet 2024, 0h30 UTC\n11 Juillet, 8:30 PM EST"
  MENU_MD_WIKI: "Trouvez des informations utiles sur Millennium Dawn : Un Monde Moderne sur le Wiki Gitlab !"
  MENU_STEAMWORKSHOP: "Laissez-nous une évaluation sur le Steam Workshop !"
  MENU_DISCORD: "Trouvez d'autres joueurs et discutez avec les développeurs sur Discord"
