--- a/localisation/french/MD_scripted_diplomatic_actions_l_french.yml
+++ b/localisation/french/MD_scripted_diplomatic_actions_l_french.yml
@@ -4,7 +4,7 @@
  RECALL_VOLUNTEERS_TOOLTIP: "§Y[This.GetNameWithFlag]§! §Rdoit disposer de forces d'intervention actives que nous pouvons retirer.§!"
  RECALL_VOLUNTEERS_TOOLTIP_G: "§Y[This.GetNameWithFlag]§! doit disposer de forces d'intervention actives que nous pouvons retirer."
  RECALL_VOLUNTEERS_SEND_DESC: "Le combat [THIS.GetDuDelaDelNP] [This.GetFlag] §Y[This.GetName]§! n'est plus notre combat. Il est temps que nous retirions nos forces du conflit.\n\n§YCette action permettra de retirer nos forces d'intervention [THIS.GetDuDelaDelNP] [This.GetFlag] §Y[This.GetName]§!"
- base_trade_condition: "Base Reluctance Against §YTrade Agreement§!"
+ base_trade_condition: "Réticence de la base à l'égard de l'§Yaccord commercial§!"
  condition_two: "Réticence du type de gouvernement"
  condition_three: "Réticence de l'opinion"
  condition_four: "Réticence de la part des deux pays qui sont membres de l'OTAN"
