--- a/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
@@ -69,8 +69,8 @@
  FIN_sako_materiel_manufacturer: "萨科"
  FIN_meyer_turku_naval_manufacturer: "迈尔图尔库"
  FRA_airbus_helicopters_tank_manufacturer: "空中客车直升机公司"
- FRA_nexter_materiel_manufacturer: "GIAT Industries - 材料部门"
- FRA_nexter_tank_manufacturer: "GIAT Industries - 装甲车辆部门"
+ FRA_nexter_materiel_manufacturer: "法国地面武器工业集团 - 材料部门"
+ FRA_nexter_tank_manufacturer: "法国地面武器工业集团 - 装甲车辆部门"
  FRA_dassault_aviation_aircraft_manufacturer: "达索航空"
  FRA_naval_group_naval_manufacturer: "海军集团 - 水面舰艇部门"
  FRA_naval_group_naval_manufacturer2: "海军集团 - 潜艇部门"
@@ -270,9 +270,8 @@
  USA_boeing_aircraft_manufacturer: "波音"
  USA_colt_defense_materiel_manufacturer: "柯尔特防务"
  USA_consolidated_robotics_materiel_manufacturer: "联合机器人公司"
- USA_general_dynamics_APC_manufacturer: "通用动力-C"
- USA_general_dynamics_materiel_manufacturer: "通用动力"
- USA_general_dynamics_tank_manufacturer: "通用动力"
+ USA_general_dynamics_materiel_manufacturer: "通用动力陆地系统"
+ USA_general_dynamics_tank_manufacturer: "通用动力陆地系统"
  USA_general_dynamics_electric_boat_naval_manufacturer: "通用动力电船公司"
  USA_bath_iron_works_naval_manufacturer: "巴斯钢铁公司"
  USA_national_steel_and_shipbuilding_company_naval_manufacturer: "国家钢铁造船公司"
@@ -287,3 +286,4 @@
  USA_united_defense_tank_manufacturer: "联合防务"
  USA_textron_tank_manufacturer: "德事隆"
  USA_textron_aviation_defense_manufacturer: "德事隆空中防务"
+ USA_general_dynamics_APC_manufacturer: "通用动力陆地系统-控制"
