--- a/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
@@ -570,8 +570,8 @@
  subject_rus.24.d: "我们的国家现在面临着新千年走向何方的选择，我们可以继续作为俄罗斯一部分的道路，还是冒险尝试获得独立。"
  subject_rus.24.a: "我们与俄罗斯同在"
  subject_rus.24.b: "我们将走自己的路"
- subject_rus.25.t: "鞑靼斯坦宣布独立"
- subject_rus.25.d: "鞑靼斯坦宣布它现在是一个独立国家。我们迫切需要决定下一步该做什么。"
+ subject_rus.25.t: "[FROM.GetNameWithFlag]宣布独立"
+ subject_rus.25.d: "[FROM.GetNameWithFlag]宣布它现在是一个独立国家。我们迫切需要决定下一步该做什么。"
  subject_rus.25.a: "镇压分裂分子"
  subject_rus.25.b: "给他们自由"
  subject_rus.26.t: "穆斯林已经夺取权力。"
@@ -2196,3 +2196,5 @@
  PMR_world_hpr: "伙伴关系：[HPR.GetNameWithFlag]"
  PMR_world_lpr: "伙伴关系：[LPR.GetNameWithFlag]"
  PMR_world_opr: "伙伴关系：[OPR.GetNameWithFlag]"
+ SUB_volunteer_idea: "在§Y伊拉克§!的军事行动"
+ SOV_che_help_iraq: "派遣§Y[CHE.GetFlag]车臣人§!去§Y[IRQ.GetFlag]伊拉克§!"
