--- a/localisation/simp_chinese/tank_modules_l_simp_chinese.yml
+++ b/localisation/simp_chinese/tank_modules_l_simp_chinese.yml
@@ -753,7 +753,7 @@
  SOV_reactive_armor_gen4_desc: "化石是第4代爆炸反应装甲，安装在T-14 阿玛塔上。\n\n§G设计师提示：爆炸反应装甲是升级你的坦克装甲的一个简单方法§!"
  SOV_smoothbore_atgm_gen1: "9K112 眼镜蛇"
  SOV_smoothbore_atgm_gen2: "9M119 斯维里河"
- SOV_smoothbore_atgm_gen3: "9M133 短号-M"
+ SOV_smoothbore_atgm_gen3: "9M133 短号"
  SOV_smoothbore_atgm_gen4: "9M140 乌德"
  SOV_smoothbore_atgm_gen5: "9M143 希拉"
  SOV_additional_machine_guns: "12.7 mm DShK 1938/46机枪"
