--- a/localisation/simp_chinese/traits_l_simp_chinese.yml
+++ b/localisation/simp_chinese/traits_l_simp_chinese.yml
@@ -1194,3 +1194,4 @@
  transparent: "透明领导者"
  leader_of_the_revolution: "革命领袖"
  leader_of_arab_world: "阿拉伯世界的领袖"
+ his_excellency: "和平与民族团结的创始人\n国家领导人\n阁下"
