--- a/localisation/french/traits_l_french.yml
+++ b/localisation/french/traits_l_french.yml
@@ -1194,3 +1194,4 @@
  transparent: "Transparent Leader"
  leader_of_the_revolution: "Leader of the Revolution"
  leader_of_arab_world: "Leader of the Arab World"
+ his_excellency: "His Excellency\nFounder of Peace and National Unity\nLeader of the Nation"
