fix ingushetia core issue

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -70,6 +70,7 @@ v1.10.1
   - Added missing XP to USN/USMC planes
   - Fixed an error with US squadrons for players without BBA
   - Fixed a graphic error linked to ships blinking/rotating
+  - Fixed Ingushetia not being a core of Don Republic after collapse of Russia
 
  Content:
   - The Communist Party of Cuba can now take the pro-LGBT policies
