some ai improvements and fixd a a russian tree bug

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -4,6 +4,7 @@ v1.10.2
   - Improved building production AI getting the various nations to focus more on productivity buildings for longer term gain
   - Enabled the AI to build the new Agriculture Districts
   - The AI should now reject investment offers of buildings that require power if they have unfulfilled energy requirements
+  - Encouraged the AI to pass the Charter of Fundamental Rights first before other laws
 
  Balance:
   - Reduced the amount of fuel consumed by non-electric (population) sources
@@ -14,6 +15,7 @@ v1.10.2
   - Fixed an issue where the Base Fuel Gain of a nation wasn't quite accurate
   - Fixed a visual display for the North Korean succession decisions
   - Fixed a bug with Iran not having F-14 Tomcats in their stockpile (For BBA Players)
+  - Fixed a bug where the Petrov section wouldn't be able to remove the Corrupt Oligarchy
 
  Content:
   - New building "Agriculture District"
@@ -21,6 +23,7 @@ v1.10.2
 
   Graphics:
   - Enlarged previously broken diplo actions backgrounds so that they fit the buttons accurately
+
 v1.10.1
 
  AI:
