political system setup

--- a/localisation/english/MD_focus_EU_USoE_l_english.yml
+++ b/localisation/english/MD_focus_EU_USoE_l_english.yml
@@ -3,7 +3,8 @@
  #############
  ### focus ###
  #############
-
+ UOE_TRANSITIONAL_COUNCIL: "USoE Transitional Government"
+ UOE_TRANSITIONAL_COUNCIL_DESC: "A transitional government, created upon the creation of the United States of Europe. This caretaker government exists only to help the people establish their new nation, and will be replaced as soon as the new government is fully established."
  ### Constitute the new European Nation ###
  USoE001: "Constitute the new European Nation"
  USoE001_desc: "The unified European Union needs to constitute itself as a new nation. The Constitution and the Unification Treaties are one thing, but now the people need to fulfill that legal framework with life."
