--- a/localisation/english/traits_l_english.yml
+++ b/localisation/english/traits_l_english.yml
@@ -346,6 +346,8 @@
  protector_of_german_culture: "Protector of German Identity"
  transitional_government: "Transitional Government"
  transitional_government_TT: "As a transitional government, §Y[THIS.GetNameWithFlag]§! is unable to engage in any foreign policy until a stable government is founded in its stead."
+ unification_shock: "Governmental Shock"
+ unification_shock_TT: "The system shock of merging several independent nations, all with different cultures, languages, and ideals, has hit the country harder than expected. If steps are not taken to stabilize and establish a new government, it could lead to disastrous consequences."
  peoples_leader: "Leader of the People"
  exiled_revolutionary: "Exiled Revolutionary"
  railroad_enthusiast: "Railroad Enthusiast"
