did a lot today

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -115,7 +115,7 @@
  
  #Economy
  HKG_under_lion_rock_hill: "Below the Lion Rock"
- HKG_under_lion_rock_hill_desc: "Below the Lion Rock, Hong Kong, which has just experienced the financial turmoil and entered the millennium, is facing many social problems. How to solve them, is left to the judgement of the Government."
+ HKG_under_lion_rock_hill_desc: "Below the Lion Rock, Hong Kong, which has just experienced the financial turmoil and entered the millennium, is facing many social problems. How to solve them, is left to the judgement of you."
  HKG_race_discrimination_bill: "Race Discrimination Bill"
  HKG_race_discrimination_bill_desc: "The Basic Law and the Hong Kong Bill of Rights Ordinance safeguard the rights of individuals, including the right against racial discrimination. We also have obligation, under the International Convention on the Elimination of All Forms of Racial Discrimination, to prohibit and to eliminate racial discrimination."
  HKG_LGBT_rights: "LGBT Rights"
@@ -255,6 +255,8 @@
  HKG_combat_underground_prostitution: "Combat Underground Prostitution"
  HKG_arrest_leaders_of_triads: "Arrest the Leaders of the Triad"
  HKG_Gong_ou_police_jointly_arrest_triad_members: "Gong‘ou Police Jointly Arrest Triad Members"
+ HKG_legco_decision_categories: "§1LegCo§!"
+ legco_current_motion_clock: "Current Motion: §Y[ROOT.legco_current_motion]§!"
 
  #Ideas
  HKG_unrestricted_housing_market: "Unrestricted Housing Market"
@@ -293,9 +295,13 @@
  Hong_Kong_Protests_desc: "Following recent actions by the Chinese government, widespread protests have broken out in Hong Kong demanding a reversal of the Chinese move."
  asian_crisis_HKG_desc: "The economic crisis that gripped developing East and Southeast Asia threw decades of growth down the drain. The Loss of confidence in the national currencies still plagues the central banks to this day. Public and private debt has also skyrocketed.\n\nPainful lessons were learned, past unwanted economic reforms are in full swing. Each country were hit differently and each have their own solutions.\n\nThe influx of investments to the affected countries were once half of the total sum in the world, but now those goes to [CHI.GetFlag]China and elsewhere."
  asian_crisis_league_HKG: "The economic crisis that gripped developing East and Southeast Asia threw decades of growth down the drain. The Loss of confidence in the national currencies still plagues the central banks to this day. Public and private debt has also skyrocketed.\n\nPainful lessons were learned, past unwanted economic reforms are in full swing. Each country were hit differently and each have their own solutions.\n\nThe influx of investments to the affected countries were once half of the total sum in the world, but now those goes to [CHI.GetFlag]China and elsewhere."
+ HKG_HKEX: "Hong Kong Exchanges and Clearing Limited"
  HKG_improve_trade: "Attract Foreign Investment"
  HKG_improve_trade_desc: ""
- HKG_idea_T_PARK: "T-PARK"
+ HKG_idea_T_PARK: "§5T-PARK§!"
+ HKG_idea_T_PARK_desc: ""
+ HKG_idea_cyberport: "Cyberport"
+ HKG_idea_cyberport_desc: ""
  HKG_idea_secondary_education_reform: "Secondary Education Reform"
  HKG_idea_secondary_education_reform_desc: "Secondary Education's old 3-2-2-3 system that used to exist in secondary schools will be reformed into the 3-3-4 Scheme which widely used in the US and China Mainland. This reform will not only remove some overlapping and obsolete but also add some more interesting elective subjects."
  HKG_idea_patriotic_education_reform: "Patriotic Education Reform"
@@ -304,15 +310,17 @@
  HKG_idea_chinese_based_education_reform_desc: "All schools in Hong Kong must teach in Chinese. Our children must be able to speak Chinese."
 
  HKG_idea_railway_development_strategy_2000: "Railway Development Strategy 2000"
+ HKG_idea_railway_development_strategy_2000_desc: "Railway Development Strategy 2000 is plan to guide the MTR's development plan for the next ten years."
  #Tooltips
  Basic_Law_HKG_idea_tt: "§HThis idea will be cancalled after [HKG.GetFlag]Hong Kong Declare its §RIndependent.§!§!"
  HKG_millitary_block_tt: "§WAs a §YS.A.R§! of §O[CHI.GetFlag]China§!, §Y[HKG.GetFlag]Hong Kong§! is not allowed to have any army and cannot change its military policy.§!"
- HONG_KONG_POLITICS_TT: "\nThe Politics of §Y[HKG.GetFlag]Hong Kong§! could be devided into three camp, §CPro-establishment camp§!, §8Pan-democracy camp§! and §GLocalist camp§!. Seats in the Legislative Council are decided by their approval ratings."
+ HONG_KONG_POLITICS_TT: "\nThe Politics of §Y[HKG.GetFlag]Hong Kong§! could be devided into three camp, §C£HKG_Conservative Pro-establishment camp§!, §8£HKG_conservatism Pan-democracy camp§! and §G£generic_Nat_Populism_small Localist camp§!. Seats in the Legislative Council are decided by their approval ratings."
 
- OPEN_LegCo_BUTTON: "§YLegislative Council§! of Hong Kong S.A.R"
- OPEN_LegCo_BUTTON_TT: "§YThe Legislative Council§! of the Hong Kong S.A.R. is the unicameral legislature of Hong Kong. It sits under China's \"one country, two systems\" constitutional arrangement, and is the power centre of Hong Kong's hybrid representative democracy."
+ OPEN_LegCo_BUTTON: "§YLegislative Council§! of [HKG.GetFlag]Hong Kong S.A.R"
+ OPEN_LegCo_BUTTON_TT: "§YThe Legislative Council§! of the [HKG.GetFlag]Hong Kong S.A.R. is the unicameral legislature of Hong Kong. It sits under China's \"one country, two systems\" constitutional arrangement, and is the power centre of Hong Kong's hybrid representative democracy."
  CLOSE_LegCo_BUTTON: "Close the LegCo"
  HKG_LegCo_TITLE: "Legislative Council"
+ LEGCO_BOOST_APPROVAL_SEAT_TT: "Cost 50 PP for a seat."
 
  legco_pro_beijing_camp_desc: "§CPro-establishment camp§!:\n £HKG_Conservative Democratic Alliance for the Betterment of Hong Kong (DAB)\n £HKG_Autocracy The New People's Party (NPP)\n £HKG_anarchist_communism Hong Kong Federation of Trade Unions (HKFTU)\n £HKG_Neutral_conservatism Path of Democracy\n £HK_Liberal_Party Liberal Party\n £generic_Neutral_Libertarian_small Third Side\n"
  legco_pan_democracy_camp_desc: "§8Pan-democracy camp§!:\n £HK_Demosisto Demosisto\n £HKG_conservatism Democratic Party\n [legco_HKG_liberalism]\n [legco_HKG_socialism]\n £HKG_Neutral_Autocracy Democratic Alliance\n £HK_Green Green Party Hong Kong\n £HK_Left Left 21\n £HK_Fourth_International Revolutionary Communist Party of China\n"
