--- a/Changelog.txt
+++ b/Changelog.txt
@@ -111,6 +111,10 @@ v1.10.1
  Localization:
   - Added new and improved localization to the European Union
   - Improved the localization for the Diplomatic Actions
+  
+ Map:
+  - Add Batken
+  - Separate Pakistan`s Tribe region
 
  Performance:
   - Cleaned up more European Union display scripted localization that was not needed
