--- a/Changelog.txt
+++ b/Changelog.txt
@@ -115,6 +115,7 @@ v1.10.1
  Map:
   - Add Batken
   - Separate Pakistan`s Tribe region
+  - Small adjustment in Center Asia
 
  Performance:
   - Cleaned up more European Union display scripted localization that was not needed
