--- a/localisation/english/MD_money_l_english.yml
+++ b/localisation/english/MD_money_l_english.yml
@@ -264,7 +264,7 @@
  VEN_iron_control_vdp_TT: "$$[?additional_income_iron_control_vdp|+3] from §Y$VEN_iron_control_vdp$§!\n"
  GER_russian_buddies_income_tt: "$$[?additional_income_GER_russian_buddies|+3] from §Y$GER_russian_buddies$§!\n"
  additional_income_DEN_consume_tax_tt: "$$[?additional_income_DEN_consume_tax|+3] from §YConsume tax§!\n"
- TUR_taxing_bosphorus: "$$[?TUR_taxing_bosphorus|+3] from §Y$Taxing the Strait$§!\n"
+ TUR_taxing_bosphorus: "$$[?TUR_taxing_bosphorus|+3] from §YTaxing the Strait§!\n"
  BLR_Kommunarka_invest_gain_loc: "$$[?BLR_Kommunarka_invest_gain|+3] from §YSales in Russia income§!\n"
  BLR_Kommunarka_invest_cis_gain_loc: "$$[?BLR_Kommunarka_invest_cis_gain|+3] from  §YSales in CIS income§!\n"
  BLR_minotor_servise_blr_gain_loc: "$$[?BLR_minotor_servise_blr_gain_loc|+3] from a deal with a Minotor Service!\n"
