--- a/localisation/english/MD_focus_EU_USoE_l_english.yml
+++ b/localisation/english/MD_focus_EU_USoE_l_english.yml
@@ -15,6 +15,8 @@
  UOE_slight_east_lean: "Slight Eastern Bias"
  UOE_mod_east_lean: "Moderate Eastern Bias"
  UOE_ext_east_lean: "Extreme Eastern Bias"
+ uoe_stab_modifier: "Imbalanced Cultural Bias"
+ uoe_stab_lrg_modifier: "Significantly Imbalanced Cultural Bias"
  uoe_cult_bal_start: "Even as we form our new nation, §YCultural Differences§! threaten to tear apart our new nation. A §Ybalance§! must be struck to ensure the stability of our great new nation\n\nStarts the §YCultural Differences§! balance of power"
  UOE_the_resource_crisis_modifier: "The Resource Crisis"
  UOE_the_resource_crisis_modifier_desc: "Our nation is struggling. The recent merging of all nations has created an unprecedented resource demand, both on production resources and power. We must swiftly move to correct this issue."
