--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -7745,7 +7745,7 @@
  SLO.Neutral_Libertarian_icon: "£SLO_Neutral_Libertarian"
  SLO.Neutral_Libertarian_desc: ""
  SLO.Neutral_Communism: "£SLO_Neutral_Communism Dawn"
- SLO.Neutral_Communism_icon: "£SLO_Neutral_Communism Dawn"
+ SLO.Neutral_Communism_icon: "£SLO_Neutral_Communism"
  SLO.Neutral_Communism_desc: ""
  SLO.Neutral_green: "£SLO_Neutral_green Slovak Green Party (SZS)"
  SLO.Neutral_green_icon: "£SLO_Neutral_green"
